# a8e

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  NOTICE  README.md  SECURITY.md  download_cli.ps1  download_cli.sh
.github/: CODEOWNERS
.github/workflows/: build-cli.yml  canary.yml  cargo-deny.yml  ci.yml  release.yml  update-homebrew.yml
crates/a8e-acp/: Cargo.toml
crates/a8e-acp/src/: server.rs  server_factory.rs
crates/a8e-acp/src/transport/: http.rs  websocket.rs
crates/a8e-acp/tests/common_tests/: mod.rs
crates/a8e-acp/tests/fixtures/: mod.rs  server.rs
crates/a8e-acp/tests/test_data/: openai_image_tool_result.txt
crates/a8e-cli/: .gitignore  Cargo.toml  WEB_INTERFACE.md
crates/a8e-cli/src/: cli.rs  logging.rs  main.rs  project_tracker.rs
crates/a8e-cli/static/: index.html  script.js
crates/a8e-core/: Cargo.toml
crates/a8e-core/examples/: agent.rs  databricks_oauth.rs  image_tool.rs  test_whisper.rs  tetrate_auth.rs
crates/a8e-core/src/: lib.rs  model.rs  posthog.rs  prompt_template.rs  scheduler.rs
crates/a8e-core/tests/: agent.rs  compaction.rs  mcp_integration_test.rs  providers.rs  repetition_inspector_tests.rs  scheduler_test_support.rs  session_id_propagation_test.rs  tetrate_streaming.rs  tool_inspection_manager_tests.rs
crates/a8e-mcp/: Cargo.toml  README.md
crates/a8e-mcp/examples/: mcp.rs
crates/a8e-mcp/src/: lib.rs
crates/a8e-server/: Cargo.toml
crates/a8e-server/src/: error.rs  logging.rs  main.rs  openapi.rs  state.rs
crates/a8e-test/: Cargo.toml
crates/a8e-test-support/: Cargo.toml
crates/a8e-test-support/examples/: mcp_fixture_server.rs
packaging/homebrew/: a8e.rb
ui/desktop/: .env
(+135 files in other folders)
